colour fixes. responsive table spacing.

--- a/src/components/Table.scss
+++ b/src/components/Table.scss
@@ -18,13 +18,13 @@
   }
 
   tr {
-    border: 1px solid #ccc;
+    border: 1px solid var(--table-border-colour);
   }
 
   td {
     /* Behave  like a "row" */
     border: none;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid var(--table-cell-border-colour);
     position: relative;
     padding-left: 50%;
   }
